--- a/2010/thesis/conclusion.tex
+++ b/2010/thesis/conclusion.tex
@@ -10,11 +10,4 @@ In the third chapter, we have described the \abb{RP} simulation and reconstructi
 
 When the alignment procedure from \Sc{al} was applied to the 2010 \abb{LHC} runs, the relative misalignments among the sensors of one unit were reduced to about $1\un{\mu m}$ of transverse shift and $0.1\un{mrad}$ of rotation about the beam axis. The alignment of units with respect to the beam was achieved with an uncertainty of about $5\un{\mu m}$ in the horizontal direction and $15\un{\mu m}$ in the vertical (for the run used for the elastic cross-section determination in \Sc{felm}).
 
-In the fifth chapter, we have presented \abb{TOTEM}'s first measurement of the $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$. The final result, compared to the predictions of the models from \Sc{el models} and the model of Jenkovszky et al.~\bref{jenkovszky11}, is shown in \Fg{ttm mod cmp dsdt}. The discriminative power of \abb{TOTEM}'s measurement is evident. In the region below the diffractive dip, $|t| \ls 0.5\un{GeV^2}$, there is a relatively good agreement among the models themselves and the measurement. But for momentum transfers $|t|$ between $0.5$ and $1\un{GeV^2}$ the models exhibit rather large spread in their predictions (one and half orders). Moreover the measurement of \abb{TOTEM} does not favour any the presented models. The measurement falls into a gap between two bands of predictions (one band is formed by the models of Islam et al., Petrov et al.~with two pomerons and Jenkovszky et al., the other band is formed by the models of Block et al., Bourrely et al.~and Petrov et al.~with three pomerons).
-
-\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{Comparison of model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
-
-We have extracted the exponential slope $B$ (see \Eq{el B}) from \abb{TOTEM}'s cross-section measurement (thick black histogram in \Fg{ttm mod cmp dsdt}). We have split the histogram into groups of six consecutive bins. Each of these groups was fitted with an exponential, resulting in a point in in \Fg{ttm mod cmp B}. The horizontal error bars indicate the span of the six-bin group, the vertical error bars reflect the fit uncertainty. The discriminative power of this plot is smaller ($B$ accounts only for the ``shape'' and not the normalization of the cross-section), but still one can conclude that the models of Jenkovszky et al.~and of Petrov et al.~(the two-pomeron version) are disfavored by \abb{TOTEM}'s data.
-
-\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{Comparison of the exponential slope $B$ from model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
-
+In the fifth chapter, we have presented \abb{TOTEM}'s first measurement of the $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$. We have compared the result to the model predictions from \Sc{el pred}. While there is relatively good match for $|t| \ls 0.5\un{GeV^2}$, none of the predictions is compatible with \abb{TOTEM}'s measurement for higher $|t|$ values.
