--- a/2010/thesis/first_el_measurement.tex
+++ b/2010/thesis/first_el_measurement.tex
@@ -1,16 +1,16 @@
 \chapter[felm]{The first elastic scattering measurement at the LHC}
 
-This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis.
+This chapter is devoted to the first measurement of the elastic scattering differential cross-section at the \abb{LHC}. This achievement, published in \bref{totem11}, is a result of efforts of the entire \abb{TOTEM} collaboration. After a brief overview of the analysis procedure, we will focus on the contributions by the author of this thesis. A comparison to model predictions will be shown at the end of the chapter (\Sc{felm cmp}).
 
-This analysis is based on the data from 29-30 October, when the \abb{RP}s were approached to $7\si$ from the beam and the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
+This analysis is based on the data from 29-30 October, when the \abb{LHC} was running at the standard 2010 optics with $\be^* = 3.5\un{m}$ and $\sqrt s = 7\un{TeV}$. Only the $220\un{m}$ stations were used. The horizontal pots were inserted only at the end of the run, just for alignment reasons. Most of the running time they were retracted not to disturb the elastic proton measurement (done with vertical pots only, see e.g.~\Fg{ttm hit distribution} right). The vertical effective lengths in the $220\un{m}$ stations lied in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal scattering angles were reconstructed from the track angles between near and far units (see \Eq{felm xy reco}). The proportionality factors $\d L_{x}/\d z$ had values of about $0.31$. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ from the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$. The event sample used for the analysis (with horizontal \abb{RP}s retracted) corresponds to an integrated luminosity of $6.1\un{nb^{-1}}$.
 
 \fig{fig/pdf/felm_scheme.pdf}{felm scheme}{The analysis work-flow, from raw data to the differential cross-section of the elastic scattering.}
 
 \Fg{felm scheme} reviews the analysis steps, each of them is briefly described below. But before going into details, let us explain the terminology used. The sector 45 (56) is called left (right) arm of the \abb{TOTEM} experiment. The elastic events consist of two protons with practically opposite directions (up to beam divergence). Thus from detector point of view, they split into two groups -- with top \abb{RP}s active in the sector 45 (so called \em{diagonal} 45 top -- 56 bottom) or with top \abb{RP}s active in the sector 56 (diagonal 45 bottom -- 56 top).
 
-\> The {\bf alignment} has been performed almost as described in \Sc{al}. We have used the \abb{LVDT} callibration from the latest collimation alignment (see \Tb{al lvdt off}), then the track-based alignment method (with the final constraints) has been applied (see \Sc{al lhc res}). These have been followed by the profile alignment (\Sc{al prof}), but no elastic alignment (\Sc{al elast}) has  been performed. The reason has been to refrain from biasing the event selection in any way. However, an alternative of method 1 from \Sc{al elast} has been employed. For that a sample of low-$\xi$ protons has been used. In this way we have obtained the horizontal alignment with a reasonable precision (below $10\un{\mu m}$), but the vertical misalignment has remained of the order of $100\un{\mu m}$ (see \Eq{al window to dp uncer}) -- this will be addressed in the step ``final vertical alignment''.
+\> The {\bf alignment} has been performed almost as described in \Sc{al}. We have used the \abb{LVDT} calibration from the latest collimation alignment (see \Tb{al lvdt off}), then the track-based alignment method (with the final constraints) has been applied (see \Sc{al lhc res}). These have been followed by the profile alignment (\Sc{al prof}), but no elastic alignment (\Sc{al elast}) has  been performed. The reason has been to refrain from biasing the event selection in any way. However, an alternative of method 1 from \Sc{al elast} has been employed. For that a sample of low-$\xi$ protons has been used. In this way we have obtained the horizontal alignment with a reasonable precision (below $10\un{\mu m}$), but the vertical misalignment has remained of the order of $100\un{\mu m}$ (see \Eq{al window to dp uncer}) -- this will be addressed in the step ``final vertical alignment''.
 
-\> {\bf Optics tuning}. Various measurable quantities (including the elastic peak titls, see \Tb{al el yx}) have been used to finetune the optics by optimizing the rotations and strengths of the \abb{LHC} magnets within their nominal uncertainties.
+\> {\bf Optics tuning}. Various measurable quantities (including the elastic peak tilts, see \Tb{al el yx}) have been used to fine-tune the optics by optimizing the rotations and strengths of the \abb{LHC} magnets within their nominal uncertainties.
 
 \> In the {\bf reconstruction} step, the projections of the scattering angle at \abb{IP} (see \Eq{ttm th x y}) are deduced from the \abb{RP} measurements. For each projection a different strategy is used, in order to minimize the impact of the uncertainty of the optical functions. For the vertical projection ($y$), the phase advance $\phi+\phi_0$ in \Eq{ttm hill sol} is close to $0$, thereby maximizing the amplitude of $y$ and minimizing the impact of the phase advance uncertainties. Thus the scattering angle can be determined directly from $y$ (cf.~\Eq{ttm lin par}): $\th_y^* = y/L_y$. In contrary, for the horizontal projection ($x$), the phase advance is close $\pi/2$. Consequently, it is better to use the angle $\th_x = \d x/\d s$, where the cosine term is replaced by a sine. With the given phase advance, the sine is close to its maximum, moreover the impact of phase advance variations is minimized. The angle $\th_x$ can be reconstructed within each station as $(x_{\rm F} - x_{\rm N}) / d$, where $d$ denotes the distance between near and far \abb{RP}s (see \Tb{ttm rp station}). To summarize, the scattering angle projections have been reconstructed as follows:
 \eqref{\eqnarray{
@@ -250,9 +250,9 @@ The idea of this method is to ``learn'' the trend of the smearing corrections by
 
 \fig{fig/pdf/felm_unfolding_m2_scheme.pdf}{felm unfolding m2 scheme}{The scheme of the bin-based method. The arrows pointing right represent smearing, the ones pointing left represent unsmearing.}
 
-Before applying any smearing step, we should make sure that the input distribution contains enough data. For example, if we like to examine the smeared distribution above a given value $\th_{\rm c}$, the input distribution (before any smearing step) should extend to at least $\th_{\rm c} -3\si(\De\th)$. Therefore, if the distribution after 3 extra smearings should be meaningful above the analysis cut $\th_c = 170\un{\mu rad}$, the measured distribution should be defined down to $(170 - 9\cdot 12.5) \un{\mu rad}\approx 60 \un{\mu rad}$. It is therefore necessary to extrapolate the measured distribution down to that value. To achieve this, we have used the $H$ parameterization (see \Eq{felm unf fm param}), just as in the fit-based method.
+Before applying any smearing step, we should make sure that the input distribution contains enough data. For example, if we like to examine the smeared distribution above a given value $\th_{\rm c}$, the input distribution (before any smearing step) should extend to at least $\th_{\rm c} -3\si(\De\th)$. Therefore, if the distribution after 3 extra smearing steps should be meaningful above the analysis cut $\th_c = 170\un{\mu rad}$, the measured distribution should be defined down to $(170 - 9\cdot 12.5) \un{\mu rad}\approx 60 \un{\mu rad}$. It is therefore necessary to extrapolate the measured distribution down to that value. To achieve this, we have used the $H$ parameterization (see \Eq{felm unf fm param}), just as in the fit-based method.
 
-The extrapolated measured distribution is shown in \Fg{felm unfolding m2 addsm}, together with the distributions after the extra smearings which have been calculated with a \abb{MC} method according to the model \Eq{felm unf sm model sim}. One can see that the effect of smearing is not linear. That is why we have chosen to perform three extra smearing steps -- it allows for a quadratic (the simplest non-linear) extrapolation.
+The extrapolated measured distribution is shown in \Fg{felm unfolding m2 addsm}, together with the distributions after the extra smearing steps which have been calculated with a \abb{MC} method according to the model \Eq{felm unf sm model sim}. One can see that the effect of smearing is not linear. That is why we have chosen to perform three extra smearing steps -- it allows for a quadratic (the simplest non-linear) extrapolation.
 
 The correction functions (compatible with the definition \Eq{felm unf fm sm corr}) are displayed in \Fg{felm unfolding m2 corrections}. The ultimate correction has been obtained by a per-bin quadratic extrapolation of the corrections 1 to 3. It is clear that bin fluctuations get amplified by the extrapolation, thus the fluctuations of the black curve are the most pronounced.
 
@@ -266,3 +266,16 @@ The correction functions (compatible with the definition \Eq{felm unf fm sm corr
 The fit-based and bin-based methods are compared in \Fg{felm unfolding m1m2 cmp}. Despite the large fluctuation of the bin-based result, a very good match is evident. The discrepancy at low $\th$ values is practically irrelevant because it falls below the analysis cut (drawn as the dashed line). Generally speaking we trust more the fit-based result, we consider the bin-based method rather as a reassuring cross-check.
 
 \fig{fig/pdf/felm_unfolding_m1m2_cmp.pdf}{felm unfolding m1m2 cmp}{A comparison of the fit-based and bin-based method (for diagonal 45 top -- 56 bottom and with $\si(\De\th) = 12\un{\mu rad}$).}
+
+
+
+
+\section[felm cmp]{Comparison to models}
+
+The final cross-section distribution compared to the predictions of the models from \Sc{el models} and the model of Jenkovszky et al.~\bref{jenkovszky11} is shown in \Fg{ttm mod cmp dsdt}. The discriminative power of \abb{TOTEM}'s measurement is evident. In the region below the diffractive dip, $|t| \ls 0.5\un{GeV^2}$, there is a relatively good agreement among the models themselves and the measurement. But for momentum transfers $|t|$ between $0.5$ and $1\un{GeV^2}$ the models exhibit a rather large spread in their predictions (one and half orders). Moreover the measurement of \abb{TOTEM} does not favour any of the presented models. The measurement falls into a gap between two bands of predictions (one band is formed by the models of Islam et al., Petrov et al.~with two pomerons and Jenkovszky et al., the other band is formed by the models of Block et al., Bourrely et al.~and Petrov et al.~with three pomerons).
+
+\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{Comparison of model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
+
+We have extracted the exponential slope $B$ (see \Eq{el B}) from \abb{TOTEM}'s cross-section measurement (thick black histogram in \Fg{ttm mod cmp dsdt}). We have split the histogram into groups of six consecutive bins. Each of these groups was fitted with an exponential, resulting in a point in in \Fg{ttm mod cmp B}. The horizontal error bars indicate the span of the six-bin groups, the vertical error bars reflect the fit uncertainty. The discriminative power of this plot is smaller ($B$ accounts only for the ``shape'' and not the normalization of the cross-section), but still one can conclude that the models of Jenkovszky et al.~and of Petrov et al.~(the two-pomeron version) are disfavored by \abb{TOTEM}'s data.
+
+\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{Comparison of the exponential slope $B$ from model predictions and \abb{TOTEM}'s first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
