--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1283,6 +1283,21 @@
 	year = "2009"
 }
 
+@Url{monitor,
+	author = "KA\v SPAR, J.",
+	title="TotemMonitor",
+	url = "https://twiki.cern.ch/twiki/bin/view/TOTEM/CompMonitor"
+	year = "2008"
+}
+
+@Url{totemdqm,
+	author = "LESZKO, R. and KA\v SPAR, J.",
+	title="TotemDQM",
+	url = "https://twiki.cern.ch/twiki/bin/view/TOTEM/CompDQM"
+	year = "2009"
+}
+
+
 #-------------------------------------------- OTHER -------------------------------------------------
 
 @Url{wikipedia,
