--- a/2010/thesis/simu_reco.tex
+++ b/2010/thesis/simu_reco.tex
@@ -35,7 +35,8 @@ The simulation process starts with generation of particles at the interaction po
 
 \> In the {\bf physics reconstruction} step, the one-\abb{RP} track fits are used to reconstruct proton(s) kinematics at the interaction point and consequently determine the type and parameters of the event. There are two versions -- one suitable for any diffractive protons and a lighter alternative for elastic events. The latter one will be discussed in \Sc{elr}.
 
-\> The {\bf alignment} modules implement the \abb{RP} alignment methods presented in \Sc{al}. There is no standardized module for the elastic alignment (\Sc{al elast}) yet, so far it has been performed together with elastic scattering analyses.
+\> The {\bf alignment} modules implement the \abb{RP} alignment methods presented in \Sc{al}.
+%There is no standardized module for the elastic alignment (\Sc{al elast}) yet, so far it has been performed together with elastic scattering analyses.
 
 \> The \abb{DIGI} data contain also some trigger-related information, which can be used for validations of the trigger system performance -- these are drawn as the {\bf trigger analyses} module.
 
@@ -187,7 +188,7 @@ where $a$ and $b$ are the coordinates of the crossing and $a_c$ and $b_c$ give t
 \eitm
 
 \vskip\itskip
-The \pmt{threshold} parameter gives an effective minimal number of hits for a cluster to be trusted as a reasonable line. The other two important parameters are the cluster sizes. If set too low, real tracks would not be recognized, if set too high, noise hits may get selected too or even multiple tracks may be merged. The needed cluster size depends on the expected deviations of the individual measurements from the track. These deviations have two major ingredients: the pitch size and misalignments. To find the optimal cluster sizes we have made a simple \abb{MC} test and a real data analysis, see \Fg{sr pattern reco tune}. For the \abb{MC} test, we have simulated  1000 (internal) misalignment scenarios compatible with \Fg{al comp det per unit}
+The \pmt{threshold} parameter gives an effective minimal number of hits for a cluster to be trusted as a reasonable line. The other two important parameters are the cluster sizes. If set too low, real tracks would not be recognized, if set too high, noise hits may get selected too or even multiple tracks may be merged. The needed cluster size depends on the expected deviations of the individual measurements from the track. These deviations have two major ingredients: the pitch size and misalignments. To find the optimal cluster sizes we have made a simple \abb{MC} test and a real data analysis, see \Fg{sr pattern reco tune}. For the \abb{MC} test, we have simulated  1000 (internal) misalignment scenarios compatible with \Tb{al exp misal}%
 %(slope $50\un{\mu m}$ per detector, deviations with the variation of $20\un{\mu m}$)
 . For each misalignment, we have simulated 1000 tracks through 5 planes separated by the nominal distance $d$, the angular spread of tracks has been $\si_\th = 5\un{mrad}$. For each track we have calculated the cluster sizes and filled the values in the blue histograms. The red histograms correspond to an analysis of physics data (run 3728). For both projection we have required each of the five planes to contain exactly one hit -- a perfect track. Looking at \Fg{sr pattern reco tune}, one can see non-negligible differences between the two histograms at lower cluster-size values (the \abb{MC} has been too simple), but both agree that there are practically no events above $3a_0$ and $4P$. Therefore we have decided to use these values as the optimal cluster sizes.
 
@@ -350,6 +351,6 @@ The data quality monitor (Totem\abb{DQM}) is an interactive program that can vis
 
 \fig[\the\hsize]{fig/external/dqm.png}{dqm ex}{A screen shot of several Totem\abb{DQM} windows.}
 
-The Totem\abb{DQM} provides a multi-window/tab user interface, each of the windows contains a configurable grid of plots, see an example in \Fg{dqm ex}. The plots can be either \em{cumulative} (built from the entire event sample) of \em{event-related} (showing details of a chosen event). Cumulative plots are for example $U$ and $V$ hit profiles (bottom-right window in \Fg{dqm ex}) or $xy$ hit maps (top-right window). Several event-related plots are shown in the background window (left-hand side): track fits in $U$ and $V$ projections and a $3D$ view of the fitted track within the detector package.
+The Totem\abb{DQM} \bref{totemdqm} provides a multi-window/tab user interface, each of the windows contains a configurable grid of plots, see an example in \Fg{dqm ex}. The plots can be either \em{cumulative} (built from the entire event sample) of \em{event-related} (showing details of a chosen event). Cumulative plots are for example $U$ and $V$ hit profiles (bottom-right window in \Fg{dqm ex}) or $xy$ hit maps (top-right window). Several event-related plots are shown in the background window (left-hand side): track fits in $U$ and $V$ projections and a $3D$ view of the fitted track within the detector package.
 
-The Totem\abb{DQM} is fully integrated in the \abb{TOTEM} offline software. Its predecessor (Monitor) is a simpler and standalone program of similar kind. It was and still is used for low (\abb{VFAT}) level tests such as \abb{RP} sensor production tests or system calibrations before data-taking.
+The Totem\abb{DQM} is fully integrated in the \abb{TOTEM} offline software. Its predecessor (Monitor \bref{monitor}) is a simpler and standalone program of similar kind. It was and still is used for low (\abb{VFAT}) level tests such as \abb{RP} sensor production tests or system calibrations before data-taking.
