--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -14,9 +14,8 @@ We have discussed several theoretical/phenomenological descriptions of the elast
 
 As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tab.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$ for the energy of $14\un{TeV}$. Extrapolations from lower energy measurements yield even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$ (see the dashed lines in \Fg{sigma tot}). \abb{TOTEM} plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two items of the physics programme. \abb{TOTEM} aims at the final precision about $1\percent$ (see the magenta cross in \Fg{sigma tot}), which would provide a decisive answer to many total-cross-related hypothesis.
 
-\Fg{ttm processes} shows typical event topologies for certain diffractive-process classes that \abb{TOTEM} plans to measure. Looking at the cross-section estimates, one can see that these processes form a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products at very forward directions. Using the definition of pseudorapidity ($\th$ denotes the scattering angle)
-\eqref{\et = - \log \tan {\th\over 2}\ ,}{pseudorapidity}
-it can be rephrased as the presence of scattering products at high pseudorapidity regions.
+\Fg{ttm processes} shows typical event topologies for certain diffractive-process classes that \abb{TOTEM} plans to measure. Looking at the cross-section estimates, one can see that these processes form a large part of the total cross-section. A characteristic property of these processes is the presence of scattering products at very forward directions, alternatively described by high pseudorapidities
+\eqref{\et = - \log \tan {\th\over 2}\ .}{pseudorapidity}
 
 \fig{fig/pdf/ttm_processes.pdf}{ttm processes}{Diffractive process classes with a cross-section estimate for the center-of-mass energy $\sqrt s = 14\un{TeV}$. For each class there are two types of diagrams (using the same color code). Left: a Feynman-like diagram showing the nature of the process, with Pomeron exchange (the double lines) as an effective description of the diffraction phenomena. Single external lines denote protons, the tripled outgoing lines represent proton dissociation. Right: a sample hit map in the pseudorapidity ($\et$) vs.~azimuthal angle ($\ph$) space.}
 
@@ -33,9 +32,12 @@ it can be rephrased as the presence of scattering products at high pseudorapidit
 
 \section[ttm det]{Detector apparatus}
 
-\Fg{ttm det overview} shows an overview of the detector apparatus of \abb{TOTEM}. All detectors are placed symmetrically about the interaction point 5 which is shared with the \abb{CMS} experiment. See \Fg{lhc} (in the introduction chapter) for the geographical location of \abb{IP}5 and the orientation of the sectors 45 and 56.
+\Fg{ttm det overview} shows an overview of the detector apparatus of \abb{TOTEM}. All detectors are placed symmetrically about the interaction point 5 which is shared with the \abb{CMS} experiment.
+%See \Fg{lhc} (in the introduction chapter) for the geographical location of \abb{IP}5 and the orientation of the sectors 45 and 56.
 
-\fig{fig/pdf/ttm_det_overview.pdf}{ttm det overview}{An overview of the \abb{TOTEM} detectors. All detectors are installed symmetrically left (sector 45) and right (sector 56) of the interaction point 5 (\abb{IP}5). Only the \rhs~is shown in the figure. Bottom part: the structure of the \abb{LHC} around \abb{IP}5. The vertical boxes represent quadrupole (Q) and dipole (D) magnets. D1 is the separation magnet -- splitting each beam to its proper beam-line, see the \rhs~of the figure. The \abb{RP} stations at $147$ and $220\un{m}$ are shown by red dots (each dot represents a unit). Upper box: zoomed region (see the guiding dashed lines) around the \abb{IP}5 -- the telescopes (red) \abb{T1} and \abb{T2} embedded into the \abb{CMS} detector (gray). The \abb{T1} telescopes are installed inside the \abb{CMS} end-caps, the \abb{T2} telescopes on the outer side of the \abb{CMS} HF calorimeters.
+\fig{fig/pdf/ttm_det_overview.pdf}{ttm det overview}{An overview of the \abb{TOTEM} detectors. All detectors are installed symmetrically left (sector 45) and right (sector 56) of the interaction point 5 (\abb{IP}5). Only the right arm (56) is shown in the figure. Bottom part: the structure of the \abb{LHC} around \abb{IP}5. The vertical boxes represent quadrupole (Q) and dipole (D) magnets.
+%D1 is the separation magnet -- splitting each beam to its proper beam-line, see the \rhs~of the figure.
+The \abb{RP} stations at $147$ and $220\un{m}$ are shown by red dots (each dot represents a unit). Upper box: zoomed region (see the guiding dashed lines) around the \abb{IP}5 -- the telescopes (red) \abb{T1} and \abb{T2} embedded into the \abb{CMS} detector (gray). The \abb{T1} telescopes are installed inside the \abb{CMS} end-caps, the \abb{T2} telescopes after the \abb{CMS} HF calorimeters.
 }
 
 \block{Telescopes T1}
@@ -49,7 +51,7 @@ There is one telescope (see \Fg{t1 installed} on each side of \abb{IP}5). Each t
 \fig[,5cm]{fig/external/t1_quarter.jpg}{t1 quarter}{[6.6cm]A \abb{T1} quarter contains 5 planes, each of them consist of 3 \abb{CSC} detectors.}
 \emfig
 
-The \abb{CSC} detectors are gaseous detectors (multi-wire proportional chambers) with both cathode plates segmented into strips. These strips and the anode wires are oriented at $60^\circ$ with respect to each other. Thus there are 3 read-out coordinates, which enables reconstruction of events with multiple tracks. The cathode strips are $4.5\un{mm}$ wide and placed with $5\un{mm}$ pitch. The anode wires, used for triggering, have a diameter of $30\un{\mu m}$ and are installed with $3\un{mm}$ pitch. The gas gap is as wide as $10\un{mm}$ filled with $\rm Ar/CO_2/CF_4$ mixture. The size of the detectors is growing with increasing distance from the \abb{IP}, reaching the maximum of $\approx 1\un{m} \times 0.68\un{m}$. The spatial resolution of one \abb{CSC} detector is about $1\un{mm}$. For further details we refer the reader to Sec.~5.2 in \bref{totem08}.
+The \abb{CSC} detectors are gaseous detectors (multi-wire proportional chambers) with both cathode plates segmented into strips. These strips and the anode wires are oriented at $60^\circ$ with respect to each other. Thus there are 3 read-out coordinates, which enables reconstruction of events with multiple tracks. The cathode strips are $4.5\un{mm}$ wide and placed with $5\un{mm}$ pitch. The anode wires, used also for triggering, have a diameter of $30\un{\mu m}$ and are installed with $3\un{mm}$ pitch. The gas gap is as wide as $10\un{mm}$ filled with $\rm Ar/CO_2/CF_4$ mixture. The size of the detectors is growing with increasing distance from the \abb{IP}, reaching the maximum of $\approx 1\un{m} \times 0.68\un{m}$. The spatial resolution of one \abb{CSC} detector is about $1\un{mm}$. For further details we refer the reader to Sec.~5.2 in \bref{totem08}.
 
 
 
@@ -72,7 +74,7 @@ The \abb{GEM} detectors are gaseous detectors where the electron multiplication 
 
 \block{The Roman Pot system}
 
-The system of Roman Pots (\abb{RP}s) consists of four stations as shown in \Fg{ttm det overview}. Each station (see \Fg{rp station}) is formed by two units. Each unit includes horizontal, top and bottom \abb{RP} and a beam position monitor (\abb{BPM}), see \Fg{rp unit}. A Roman Pot itself is shown in \Fg{rp pot}. In order to minimize the material budget in the path of detectable protons, the \abb{RP} walls are replaced by the thin window around the sensors. Its front face is $500\un{\mu m}$ thick, the face exposed to the beam only $150\un{\mu m}$. Inside each \abb{RP}, there is a detector package (\abb{DP}), see \Fg{rp package}. It is package of 5 back-to-back mounted pairs of hybrids. A hybrid is an electronic board carrying an edgeless silicon sensor and four read-out (\abb{VFAT}) chips, as shown in \Fg{rp hybrid}. Each \abb{RP} station is followed by a series of beam loss monitors (\abb{BLM}), the role of which is to monitor the beam losses induced by the \abb{RP} operations. One of the nearest \abb{BLM}s is shown in \Fg{rp blm bpm}. Further details on the \abb{RP} system can be found in Ch.~4 in \bref{totem08}.
+The system of Roman Pots (\abb{RP}s) consists of four stations as shown in \Fg{ttm det overview}. Each station (see \Fg{rp station}) is formed by two units. Each unit includes horizontal, top and bottom \abb{RP} and a beam position monitor (\abb{BPM}), see \Fg{rp unit}. A Roman Pot itself is shown in \Fg{rp pot}. In order to minimize the material budget in the path of detectable protons, the \abb{RP} walls are replaced by the thin window around the sensors. Its front face is $500\un{\mu m}$ thick, the face exposed to the beam only $150\un{\mu m}$. Inside each \abb{RP}, there is a detector package (\abb{DP}) of 5 back-to-back mounted pairs of hybrids, see \Fg{rp package}. A hybrid is an electronic board carrying an edgeless silicon sensor and four read-out (\abb{VFAT}) chips, as shown in \Fg{rp hybrid}. Each \abb{RP} station is followed by a series of beam loss monitors (\abb{BLM}), the role of which is to monitor the beam losses induced by the \abb{RP} operations. One of the nearest \abb{BLM}s is shown in \Fg{rp blm bpm}. Further details on the \abb{RP} system can be found in Ch.~4 in \bref{totem08}.
 
 \bmfig
 \fig{fig/pdf/rp_station.pdf}{rp station}{[7.3cm]A \abb{RP} station installed in the tunnel. The green frames show the two units (only top and horizontal pots are visible)}
@@ -125,9 +127,9 @@ In the following chapters we will make important considerations based on the pro
 \hbox{220 m station} & 214.628 & 214.628 & 215.078 & 219.550 & 220.000 & 220.000 \cr\bln
 }
 
-\Fg{rp station 3d} shows the geometry of the \abb{RP} stations. It defines the $xyz$ coordinate system which is bound to the station. The $z$ axis overlaps with the beam axis, the horizontal $x$ axis points outside the \abb{LHC} ring and the $y$ axis points up (against gravity). We have also defined $U$ and $V$ directions, which are obtained by rotating the $x$ and $y$ directions by $45^\circ$. The $U$ and $V$ directions are useful since they describe the read-out and/or strip directions of the silicon sensors. Besides these two coordinate systems, the figure shows a number of $uv$ reference frames. Each of them is bound to a sensor. Its origin overlaps with the center of the sensor, the $u$ axis is parallel to the strips, the $v$ axis is perpendicular to them and hence gives the \em{read-out direction}. Due to the back-to-back sensor assembly, the odd and even planes have the $u$ and $v$ axes swapped. A similar situation takes place for the sensors' center offsets (red arrows, about $0.5\un{mm}$) from the package axes (dotted lines).
+\Fg{rp station 3d} shows the geometry of the \abb{RP} stations. It defines the $xyz$ coordinate system which is bound to the station. The $z$ axis overlaps with the beam axis, the horizontal $x$ axis points outside the \abb{LHC} ring and the $y$ axis points up (against gravity). We have also defined $U$ and $V$ directions, which are obtained by rotating the $x$ and $y$ directions by $45^\circ$. The $U$ and $V$ directions are useful since they describe the read-out and/or strip directions of the silicon sensors. Besides these two coordinate systems, the figure shows the $uv$ reference frames. Each of them is bound to a sensor. Its origin overlaps with the center of the sensor, the $u$ axis is parallel to the strips, the $v$ axis is perpendicular to them and hence gives the \em{read-out direction}. Due to the back-to-back sensor assembly, the odd and even planes have the $u$ and $v$ axes swapped. A similar situation takes place for the sensors' center offsets (red arrows, about $0.5\un{mm}$) from the package axes (dotted lines).
 
-Later on, we will call \em{$V$ sensors} all the sensors which have their (nominal -- neglecting misalignment) read-out directions parallel or anti-parallel to the $V$ direction. For $U$ sensors analogically.
+Later on, we will call \em{$V$ sensors} all the sensors which have their (nominal -- neglecting misalignment) read-out directions parallel or anti-parallel to the $V$ direction. Similarly for $U$ sensors.
 
 
 \fig[14cm]{fig/pdf/rp_station_3d.pdf}{rp station 3d}{The geometry of \abb{RP} stations (only the first two planes/sensors of the 56-220-near unit are drawn). The proportions have been modified for graphical reasons, they are not in scale. The blue line marks the beam axis. The red arrows mark the offsets of sensors' centers from the package axes (slightly inclined dotted lines). The $v$ vectors give the read-out directions. The green lines show the distances between sensors' cut edges and the beam axis.
@@ -161,17 +163,15 @@ We will use the notation that quantities related to the \abb{IP} will be denoted
 It will be useful to define the \em{projections of the scattering angle} (both for \abb{IP} and \abb{RP}-station quantities)
 \eqref{\th_x = \th \cos\ph\ ,\qquad \th_y = \th \sin\ph\ .}{ttm th x y}
 Similarly, one can define the projections of the momentum transfer $t$:
-\eqref{t_x = t \cos^2\ph^*\ ,\qquad t_y = t \sin^2\ph^*\ ,}{ttm t x y}
-This definition follows from the low-scattering-angle approximation in \Eq{el t}, which we will commonly use in what follows (the scattering angles of interest are at most of the order $10^{-3}\un{rad}$, see e.g.~\Fg{el mod dsdt large}). The definitions \Eq{ttm th x y,ttm t x y} yield relations
+\eqref{t_x = t \cos^2\ph^*\ ,\qquad t_y = t \sin^2\ph^*\ .}{ttm t x y}
+This definition follows from the low-scattering-angle approximation in \Eq{el t}, which we will commonly use later on (the scattering angles of interest are at most of the order $10^{-3}\un{rad}$, see e.g.~\Fg{el mod dsdt large}). The definitions \Eq{ttm th x y,ttm t x y} yield relations
 \eqref{t = t_x + t_y = - p^2 \th^{*2} = - p^2 (\th_x^{*2} + \th_y^{*2})\ .}{ttm t th}
 
 Since the magnetic field within the \abb{RP} stations is negligible, protons follow a straight trajectory there. The relation between \abb{RP} sensor measurements and the parameters of the trajectory is therefore simple (for details see \Sc{al psi}). What is much more interesting is the proton transport from the \abb{IP} to the \abb{RP} stations. We will discuss it in the rest of this section.
 
 The transverse motion of protons in the \abb{LHC} can be described by a solution of the Hill's equation (see e.g.~Sec.~3.3 in \bref{wilson} or Ch.~4 in \bref{dolezal}):
-\eqref{x(s) = \sqrt{\be(s) \ep}\ \cos\big(\phi(s) + \phi_0\big)\ .}{ttm hill sol}
-We have written the solution for the horizontal direction only, for the vertical it is analogous. The solution has a form of oscillations with the amplitude given by the emittance $\ep$ (a measure of the beam size and divergence\footnote{%
-A quantity which is used more often is the normalized emittance $\ep_{\rm N} = \be\ga \ep$. $\be$ and $\ga$ are the relativistic factors, see \Eq{sm lorentz}. The advantage of the normalized emittance is that it does not change during beam acceleration, see Sec.~4.1 in~\bref{wilson}.
-}) and the $\be(s)$ function (reflects the layout and strengths of the \abb{LHC} magnets). The phase of the oscillations is given by $\phi(s)$ which is related to $\be(s)$ by $\d\phi/\d s = 1/\be(s)$.
+\eqref{x(s) = \sqrt{\be(s)\, \ep}\ \cos\big(\phi(s) + \phi_0\big)\ .}{ttm hill sol}
+We have written the solution for the horizontal direction only, for the vertical it is analogous. The solution has a form of oscillations with the amplitude given by the \em{emittance} $\ep$ (defining the size and divergence of the beam) and the \em{betatron function} $\be(s)$ (reflecting the layout and strengths of the \abb{LHC} magnets). The \em{phase} of the oscillations is given by $\phi(s)$ which is related to $\be(s)$ by $\d\phi/\d s = 1/\be(s)$. The emittance is usually expressed in terms of the \em{normalized emittance} $\ep_{\rm N} = \be\ga \ep$, where $\be$ and $\ga$ are the relativistic factors, see \Eq{sm lorentz}. The advantage of the normalized emittance is that it does not change during beam acceleration, see Sec.~4.1 in~\bref{wilson}.
 
 From \Eq{ttm hill sol} one can read off the amplitude of the oscillations, which effectively determines the beam size:
 \eqref{\si(s) = \sqrt{\be(s)\ep}\ .}{ttm beam sigma}
@@ -184,11 +184,11 @@ The solution \Eq{ttm hill sol} was derived for protons of the nominal momentum $
 \eqref{x(s) =\ L_x(s, \ldots)\, \th_x^* + v_x(s,\ldots)\, x^* + D_x(s,\ldots)\,\xi}{ttm lin par}
 and equivalently for the vertical direction. In the previous relation we have introduced the \em{effective length} $L$, the \em{magnification} $v$ and the \em{dispersion} $D$. We will refer to them as \em{optical functions}. These functions depend on the distance $s$ from the \abb{IP}, but may also depend on the variables $\th_x^*$, $x^*$ and $\xi$. For the optics of practical interest, however, $\xi$ is the only relevant dependence.
 
-Strictly speaking, the form of \Eq{ttm lin par} is oversimplified. Due to higher order corrections, $x$ and $y$ projections are not strictly independent and consequently one should include also dependence on $\th_y^*$ and $y^*$. For the nominal optics these terms are negligible. However in reality, due to magnet misalignments (mostly their rotations), the coupling between $x$ and $y$ projections may become important, see e.g.~\Fg{al el plots yx}.
+Strictly speaking, the form of \Eq{ttm lin par} is oversimplified. Due to higher order corrections, $x$ and $y$ projections are not strictly independent and consequently one should include also dependence on $\th_y^*$ and $y^*$. For the foreseen optics these terms are negligible. However in reality, due to magnet misalignments (mostly their rotations), the coupling between $x$ and $y$ projections may become important, see e.g.~\Fg{al el plots yx}.
 
 In practice the optical functions are calculated with dedicated computer programs such as MAD-X \bref{mad-x}. Since they might be too slow for large Monte Carlo (\abb{MC}) simulations, \abb{TOTEM}'s software (see \Sc{sr}) includes a module that calculates a polynomial parameterization of a MAD-X output, for details see Sec.~6.4 in \bref{hubert}.
 
-For standard \abb{LHC} runs one may expect a beam-momentum offset
+For typical \abb{LHC} beams one may expect a beam-momentum offset
 \eqref{\bar\xi = \O{10^{-3}}}{ttm energy off}
 and the proton-to-proton momentum fluctuation
 \eqref{\si_\xi = \O{10^{-4}}\ .}{ttm energy fl}
@@ -199,11 +199,11 @@ Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the \abb
 
 \fig{fig/pdf/ttm_elastic_acceptance.pdf}{ttm elastic acceptance}{The elastic acceptances for three optics types. Calculated for $\sqrt{s} = 14\un{TeV}$ and with \abb{RP} sensors at $10\si + 0.5\un{mm}$. The horizontal line marks the points $|t_{30}|$ where the acceptances reach $30\percent$.}
 
-The rich physics programme of \abb{TOTEM} requires several running scenarios, including several optics. We will now review the scenarios as they were originally foreseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. Afterwards, we will describe the run conditions used for the first elastic scattering measurement at $\sqrt s = 7\un{TeV}$ (discussed in \Sc{felm}). We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
+The rich physics programme of \abb{TOTEM} requires several running scenarios, including several optics. We will now review the scenarios as they were originally foreseen for the center-of-mass energy $\sqrt s = 14\un{TeV}$. The main characteristics stay the same for the reduced energy of $7\un{TeV}$ -- see for example the optics used for the first elastic scattering measurement, presented in \Sc{felm}. We will classify the scenarios by the beta-function values at the interaction point $\be^*$.
 
 \> The \em{high-$\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts on a reduced normalized emittance of $\ep_{\rm N}=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the \abb{IP} $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e.~the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the \abb{RP}s to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{28} \un{cm^{-2}s^{-1}}$.
 
-\> The \em{medium-$\be^*$} scenario is based on a very universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. Moreover, $L_x$ practically vanishes in the far units, which simplifies the distinction between elastic and inelastic protons (the horizontal elongation can only come from proton's momentum loss). The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ was planned to be used (nowadays the \abb{LHC} reaches emittance values as low as $2\un{\mu m\ rad}$), leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.6\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts much later -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts on a luminosity of ${\cal L} \approx 10^{28} \hbox{ -- } 10^{29}\un{cm^{-2}s^{-1}}$.
+\> The \em{medium-$\be^*$} scenario is based on an universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and all diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. Moreover, $L_x$ practically vanishes in the far units, which simplifies the distinction between elastic and inelastic protons (the horizontal elongation can only come from proton's momentum loss, cf.~\Eq{ttm lin par}). The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ was planned to be used (nowadays the \abb{LHC} reaches emittance values as low as $2\un{\mu m\ rad}$), leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.6\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts much later -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts on a luminosity of ${\cal L} \approx 10^{28} \hbox{ -- } 10^{29}\un{cm^{-2}s^{-1}}$.
 
 \> The \em{low-$\be^*$} scenarios ($\be^*$ between $0.5$ and $3.5\un{m}$) were designed for diffractive studies and large-$|t|$ elastic scattering measurements. They are optimized for high luminosities ${\cal L} \approx 10^{32} \hbox{ -- } 10^{33}\un{cm^{-2}s^{-1}}$ and not for forward proton detection -- the effective lengths at the $220\un{m}$ stations do not exceed $L_x = 2\un{m}$ and $L_y = 20\un{m}$. With the standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ the beam divergence is rather large: $\si_{\th^*} \approx 16\un{\mu rad}$. The beam sizes at the $220\un{m}$ are about $\si_x = 0.1\un{mm}$ and $\si_y = 0.3\un{mm}$. The elastic acceptance (green histogram in \Fg{ttm elastic acceptance}) reaches $30\percent$ at $|t_{30}| = 2.5\un{GeV^2}$.
 
@@ -211,7 +211,6 @@ The rich physics programme of \abb{TOTEM} requires several running scenarios, in
 
 \Fg{ttm hit distribution} illustrates the properties of the three types of optics. The horizontal (vertical) spread of hits is determined by the horizontal effective length $L_x$ (the vertical $L_y$). That is why the $\be^* = 90$ and $2\un{m}$ optics yield very narrow elastic scattering hit distributions. The gray ellipses show the $10\si$ beam contours, thereby controlling the positions of the \abb{RP}s.
 
-Now let us describe the run conditions used for the first elastic scattering measurement (the data analysis presented in \Sc{felm}). The center-of-mass energy was $\sqrt s = 7\un{TeV}$ and the standard 2010 \abb{LHC} optics with $\be^* = 3.5\un{m}$ was used. This optics falls into the group of low-$\be^*$ optics (as described above). The vertical effective lengths in the $220\un{m}$ stations (the only stations used for the measurement) lied in the range $L_y = (22 \hbox{ -- } 23)\un{m}$. The horizontal effective lengths were too small for proton reconstruction and thus the horizontal scattering angle $\th_x^*$ was calculated from the horizontal angles $\th_x = (x_{\rm F} - x_{\rm N})/(z_{\rm F} - z_{\rm N})$ measured in each station. These angles are related by the factor $\d L_{x}/\d z$ which had values of about $0.31$ for this optics. A dedicated run with four low-luminosity bunches ($7\cdot10^{10}$ protons per bunch) was used. The normalized emittance was about $2\un{\mu m\ rad}$, which yielded the beam divergence $\si_{\th^*} \approx 17\un{\mu rad}$. For this special run the \abb{RP}s were approached as close as $7\si$ from the beam. This allowed us to measure the elastic differential cross-section down to $|t| = 0.36\un{GeV^2}$.
 
 
 
